# respeaker_ros

./: CMakeLists.txt
scripts/: respeaker_gencfg.py  respeaker_node.py  speech_to_text.py
